<?xml version="1.0"?>
<package format="2">
  <name>synthia_to_rosbag</name>
  <version>0.0.0</version>
  <description>A set of tools for parsing SYNTHIA into ROS messages and outputting them as ROS bag files.</description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="gawela@ethz.ch">Abel Gawel</author>

  <maintainer email="gawela@ethz.ch">Abel Gawel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>minkindr</depend>
  <depend>minkindr_conversions</depend>
  <depend>nav_msgs</depend>
  <depend>opencv3_catkin</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>rosbag</depend>
</package>
